1998-12-08  Tim P. Gerla  <timg@means.net>

	* gnome-paper-selector.c: Added some padding around the dialog.

1998-12-08  Herbert Valerio Riedel  <hvr@hvrlab.ml.org>

	* gtk-ted.c: fixed some cast-warnings
	* gnome-stock.c: fixed some cast-warnings
	* gnome-mdi.c: added #include <string.h> for memcpy()
	* gnome-href.c: added #include <string.h> for strlen()
	* gnome-font-selector.[ch]: enforced use of const-ness and
       	glib-typedefs  
	* gnome-dns.c: GINT_TO_POINTER() instead of a mere (gpointer)
	(gnome_dns_callback): same
	* gnome-appbar.c: added #include <string.h> for strlen()
	* gnome-init.c: added #include <esd.h> if HAVE_ESD

1998-12-08  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gtkcauldron.c (get_gnome_number_entry_result): Make static.
	(get_gnome_file_entry_result): same.

1998-12-08  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.c (book_switch_page): only call app_set_view() if the
	new current page's child differs from active_view.
	(gnome_mdi_set_mode): open a toplevel if there was one open before,
	even without any children.
	* gnome-app-helper.c (gnome_app_install_statusbar_menu_hints,
	gnome_app_install_appbar_menu_hints): handle GNOME_APP_UI_RADIOITEMS
	and don't try to set callback for GNOME_APP_UI_HELP entry.

1998-12-08  Ettore Perazzoli  <ettore@comm2000.it>

	* gnome-dock-band.h: Removed unused enum that caused
	`makeenums.pl' to complain.

1998-12-08  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.[ch]: scratched custom functions for creating
	menubar/toolbar. use app_created signal instead to customize
	each GnomeApp at your will if the GnomeUIInfo templates don't
	do it for you. also moved GNOME_MDI_*_INFO_KEYs back to
	gnome-mdi.c and added functions to retrieve the UIInfo arrays
	from GnomeApps to prevent a temptation of the users to try and
	set some of their own data with this key.
	* gnome-mdi-session.c: added documentation.
	* gnome-app-helper.c (gnome_app_install_menu_hints): new function